# netcore-cpaas-mcp

./: .gitignore  README.md  llm-context.md  main.py  netcore_cpaas_mcp.py  netcore_whatsapp_integration.py  pyproject.toml  requirements.txt  setup_instructions.md
